...
                                                <constraint firstAttribute="bottom" secondItem="OP9-83-wZW" secondAttribute="bottom" constant="4" id="yOe-hu-Zzr"/>
                                            </constraints>
                                        </tableViewCellContentView>
                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <connections>
                                            <outlet property="gradientLayer" destination="ZTr-4Q-UA3" id="yw3-1Z-gLT"/>
                                            <outlet property="heartButton" destination="7U8-jh-slb" id="4aL-u0-t7S"/>
                                            <outlet property="imageDateLabel" destination="PZg-RO-t17" id="gO2-fB-CCM"/>
                                            <outlet property="mainImageView" destination="OP9-83-wZW" id="WcJ-cX-GWR"/>
                                        </connections>
                                    </tableViewCell>
                                </prototypes>
                            </tableView>
...
                            <constraint firstItem="WeM-VJ-JTR" firstAttribute="top" secondItem="ZEF-MM-roh" secondAttribute="top" constant="9" id="jC5-i2-jWu"/>
                            <constraint firstItem="eYh-t7-i4u" firstAttribute="leading" secondItem="ZEF-MM-roh" secondAttribute="leading" id="v72-g6-XnU"/>
                            <constraint firstItem="WeM-VJ-JTR" firstAttribute="leading" secondItem="ZEF-MM-roh" secondAttribute="leading" constant="9" id="w3w-EE-F2m"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="backButton" destination="WeM-VJ-JTR" id="8aB-4B-jcw"/>
                        <outlet property="imageView" destination="GZe-DN-f6K" id="8tb-cA-xZp"/>
                        <outlet property="scrollView" destination="eYh-t7-i4u" id="pf7-Vs-plq"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="ziw-W1-7bf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
                                    <constraint firstAttribute="height" constant="60" id="woJ-u8-waN"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ndG-wN-ctA">
                                <rect key="frame" x="16" y="640" width="343" height="48"/>
                                <color key="backgroundColor" name="YP White"/>
                                <accessibility key="accessibilityConfiguration" identifier="Authenticate"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="wbX-Nn-7Eb"/>
                                </constraints>
                                <color key="tintColor" name="YP Black"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Войти">
...
            <objects>
                <viewController storyboardIdentifier="WebViewViewController" id="zWD-gd-dKf" customClass="WebViewViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="W5i-i2-nG4">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <wkWebView contentMode="scaleToFill" restorationIdentifier="UnsplashWebView" translatesAutoresizingMaskIntoConstraints="NO" id="hE5-MH-aqm">
                                <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                                <color key="backgroundColor" name="YP White"/>
                                <wkWebViewConfiguration key="configuration">
                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
                                    <wkPreferences key="preferences"/>
                                </wkWebViewConfiguration>
...
