...
		if let userImage = UIImage(named: "UserPick") {
			return configImage(image: userImage)
		}
		return UIImageView()
	}()
	
	private lazy var escapeButton: UIButton = {
		if let exitImage = UIImage(named: "Exit") {
			let button = UIButton.systemButton(with: exitImage, target: self, action: #selector(exitButtonTapped))
			button.tintColor = UIColor.ypRed
			button.translatesAutoresizingMaskIntoConstraints = false
			button.accessibilityIdentifier = "escapeButton"
			view.addSubview(button)
...
	override func viewDidLayoutSubviews() {
		userPickImage.layer.cornerRadius = userPickImage.bounds.width / 2
		userPickImage.clipsToBounds = true
	}
	
	@objc private func exitButtonTapped() {
		let actionYes = UIAlertAction(title: "Да", style: .default) { [weak self] _ in
			guard let self = self else { return }
			self.logOutFromProfile()
		}
		
		let actionNo = UIAlertAction(title: "Нет", style: .default)
		
...
